gcc/testsuite/rust/rustc/ui/traits/dont-match-error-ty-with-calller-supplied-obligation-issue-121941_dg.rs
fn function<T: PartialEq>() {
    foo == 2; // { dg-error ".E0425." "" { target *-*-* } }
}

fn main() {}

